feat: token validation endpoint and uuid id added for global use of id
